@@ -1,6 +1,7 @@
 Release Note
 
 * current
+  * introduced EventServiceLastUnprocessed
   * added reqID
   * fixed increaseAttemptNr to increase max attempt for secondary datasets
   * fixed to increment nFilesUsed when merging is killed before merge generation
